# swift-cmake-examples

2_executable_library/: CMakeLists.txt
2_executable_library/lib/: factorial.swift
2_executable_library/src/: main.swift
3_bidirectional_cxx_interop/: CMakeLists.txt
3_bidirectional_cxx_interop/lib/fibonacci/: fibonacci.cpp  fibonacci.swift
3_bidirectional_cxx_interop/src/: CMakeLists.txt  fibonacci.cpp  fibonacci.swift
